--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>HireReady Tech</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
 <header>
     <h1>HireReady Tech</h1>
     <p>Engineering Career Intelligence Platform</p>
@@ -9,3 +17,15 @@
     <a href="signals.html">Industry Signals</a>
     <a href="trend.html">Weekly Trends</a>
 </nav>
+
+<section>
+    <h2>Welcome</h2>
+    <p>Daily curated job updates, internships, and industry hiring intelligence for CSE students.</p>
+</section>
+
+<footer>
+    <p>© 2026 HireReady Tech</p>
+</footer>
+
+</body>
+</html>
