--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 
-<header>
-    <h1>HireReady Tech</h1>
-    <p>Engineering Career Intelligence Platform</p>
+<header class="hero">
+    <div class="hero-content">
+        <h1>HireReady Tech</h1>
+        <p>Engineering Career Intelligence Platform</p>
+        <h3>Daily Jobs • Internships • Industry Signals • Hiring Trends</h3>
+    </div>
 </header>
 
 <nav>
@@ -18,9 +21,46 @@
     <a href="trend.html">Weekly Trends</a>
 </nav>
 
-<section>
-    <h2>Welcome</h2>
-    <p>Daily curated job updates, internships, and industry hiring intelligence for CSE students.</p>
+<section class="section">
+    <h2>What We Provide</h2>
+    <div class="grid">
+        <div class="card">
+            <h3>Daily Job Updates</h3>
+            <p>Curated mass recruiter and product-based job openings for CSE students.</p>
+        </div>
+        <div class="card">
+            <h3>Internship Alerts</h3>
+            <p>2nd, 3rd, and final year internship opportunities across India.</p>
+        </div>
+        <div class="card">
+            <h3>Industry Signals</h3>
+            <p>Market shifts, hiring movement, AI & Cloud demand updates.</p>
+        </div>
+        <div class="card">
+            <h3>Weekly Trend Report</h3>
+            <p>Skill demand insights to align preparation strategy.</p>
+        </div>
+    </div>
+</section>
+
+<section class="section alt">
+    <h2>Who Is This For?</h2>
+    <ul>
+        <li>CSE Students (2nd / 3rd / Final Year)</li>
+        <li>Fresh Graduates</li>
+        <li>Students Preparing for Mass Recruiters</li>
+        <li>Aspiring Product-Based Engineers</li>
+    </ul>
+</section>
+
+<section class="section">
+    <h2>How It Works</h2>
+    <ol>
+        <li>Daily curated opportunities updated.</li>
+        <li>Weekly trend analysis provided.</li>
+        <li>Students align preparation accordingly.</li>
+        <li>Consistent industry awareness maintained.</li>
+    </ol>
 </section>
 
 <footer>
