--- a/index.html
+++ b/index.html
@@ -6,66 +6,42 @@
 </head>
 <body>
 
-<header class="hero">
-    <div class="hero-content">
-        <h1>HireReady Tech</h1>
-        <p>Engineering Career Intelligence Platform</p>
-        <h3>Daily Jobs • Internships • Industry Signals • Hiring Trends</h3>
-    </div>
-</header>
+<div class="layout">
 
-<nav>
-    <a href="jobs.html">Jobs</a>
-    <a href="internships.html">Internships</a>
-    <a href="signals.html">Industry Signals</a>
-    <a href="trend.html">Weekly Trends</a>
-</nav>
+    <aside class="sidebar">
+        <h2>HireReady Tech</h2>
+        <a href="index.html">Dashboard</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="internships.html">Internships</a>
+        <a href="#">Resume Lab</a>
+        <a href="signals.html">Industry Signals</a>
+        <a href="trend.html">Weekly Trends</a>
+    </aside>
 
-<section class="section">
-    <h2>What We Provide</h2>
-    <div class="grid">
+    <main class="main">
+        <h1>Dashboard</h1>
+
         <div class="card">
-            <h3>Daily Job Updates</h3>
-            <p>Curated mass recruiter and product-based job openings for CSE students.</p>
+            <h3>📌 Latest Jobs Updated</h3>
+            <p>Mass Recruiter & Product-based roles curated daily.</p>
+            <a class="btn" href="jobs.html">View Jobs</a>
         </div>
-        <div class="card">
-            <h3>Internship Alerts</h3>
-            <p>2nd, 3rd, and final year internship opportunities across India.</p>
-        </div>
-        <div class="card">
-            <h3>Industry Signals</h3>
-            <p>Market shifts, hiring movement, AI & Cloud demand updates.</p>
-        </div>
-        <div class="card">
-            <h3>Weekly Trend Report</h3>
-            <p>Skill demand insights to align preparation strategy.</p>
-        </div>
-    </div>
-</section>
 
-<section class="section alt">
-    <h2>Who Is This For?</h2>
-    <ul>
-        <li>CSE Students (2nd / 3rd / Final Year)</li>
-        <li>Fresh Graduates</li>
-        <li>Students Preparing for Mass Recruiters</li>
-        <li>Aspiring Product-Based Engineers</li>
-    </ul>
-</section>
+        <div class="card">
+            <h3>🎓 Internship Opportunities</h3>
+            <p>Internships for 2nd / 3rd / Final Year students.</p>
+            <a class="btn" href="internships.html">View Internships</a>
+        </div>
 
-<section class="section">
-    <h2>How It Works</h2>
-    <ol>
-        <li>Daily curated opportunities updated.</li>
-        <li>Weekly trend analysis provided.</li>
-        <li>Students align preparation accordingly.</li>
-        <li>Consistent industry awareness maintained.</li>
-    </ol>
-</section>
+        <div class="card">
+            <h3>📊 Weekly Hiring Trends</h3>
+            <p>Understand skill demand movement & industry signals.</p>
+            <a class="btn" href="trend.html">View Trends</a>
+        </div>
 
-<footer>
-    <p>© 2026 HireReady Tech</p>
-</footer>
+    </main>
+
+</div>
 
 </body>
 </html>
