--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>HireReady Tech</title>
-    <<link rel="stylesheet" href="style.css">>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -45,4 +45,5 @@
 
 </body>
 </html>
+
 
