--- a/index.html
+++ b/index.html
@@ -19,31 +19,57 @@
     </aside>
 
     <main class="main">
-        <h1>Dashboard</h1>
+    <h1>Dashboard</h1>
 
-        <div class="card">
-            <h3>📌 Latest Jobs Updated</h3>
-            <p>Mass Recruiter & Product-based roles curated daily.</p>
-            <a class="btn" href="jobs.html">View Jobs</a>
+    <!-- Stats Overview -->
+    <div class="stats">
+        <div class="stat-card">
+            <h3>25+</h3>
+            <p>Active Job Openings</p>
         </div>
-
-        <div class="card">
-            <h3>🎓 Internship Opportunities</h3>
-            <p>Internships for 2nd / 3rd / Final Year students.</p>
-            <a class="btn" href="internships.html">View Internships</a>
+        <div class="stat-card">
+            <h3>18+</h3>
+            <p>Live Internships</p>
         </div>
-
-        <div class="card">
-            <h3>📊 Weekly Hiring Trends</h3>
-            <p>Understand skill demand movement & industry signals.</p>
-            <a class="btn" href="trend.html">View Trends</a>
+        <div class="stat-card">
+            <h3>6</h3>
+            <p>Mass Recruiter Updates</p>
         </div>
+    </div>
 
-    </main>
+    <!-- Action Cards -->
+
+    <div class="card">
+        <h3>📌 Latest Jobs Updated</h3>
+        <p>Mass Recruiter & Product-based roles curated daily with package & eligibility details.</p>
+        <a class="btn" href="jobs.html">View Jobs</a>
+    </div>
+
+    <div class="card">
+        <h3>🎓 Internship Opportunities</h3>
+        <p>Internships for 2nd / 3rd / Final Year students with stipend & direct apply links.</p>
+        <a class="btn" href="internships.html">View Internships</a>
+    </div>
+
+    <div class="card">
+        <h3>📊 Weekly Hiring Trends</h3>
+        <p>Understand skill demand movement, AI impact & industry signals.</p>
+        <a class="btn" href="trend.html">View Trends</a>
+    </div>
+
+    <div class="card">
+        <h3>📄 Resume Lab</h3>
+        <p>ATS Resume templates, checklist & optimization guidance for placements.</p>
+        <a class="btn" href="#">Explore Resume Lab</a>
+    </div>
+
+</main>
+
 
 </div>
 
 </body>
 </html>
+
 
 
