--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <aside class="sidebar">
         <h2>HireReady Tech</h2>
-        <a href="index.html">Dashboard</a>
+        <a href="index.html" class="active">Dashboard</a>
         <a href="jobs.html">Jobs</a>
         <a href="internships.html">Internships</a>
         <a href="#">Resume Lab</a>
@@ -70,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
