--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <div class="layout">
 
     <aside class="sidebar">
-        <h2>HireReady Tech</h2>
+           <div class="logo">
+        <span class="logo-icon">HR</span>
+        <span class="logo-text">HireReady</span>
+    </div>
+
+    <a href="index.html" class="active">Dashboard</a>
+
         <a href="index.html" class="active">Dashboard</a>
         <a href="jobs.html">Jobs</a>
         <a href="internships.html">Internships</a>
@@ -70,6 +76,7 @@
 
 </body>
 </html>
+
 
 
 
