--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     </aside>
 
     <main class="main">
-    <h1>Dashboard</h1>
+
+    <div class="topbar">
+        <h1>Dashboard</h1>
+        <button class="primary-btn">+ Add Job</button>
+    </div>
+
 
     <!-- Stats Overview -->
     <div class="stats">
@@ -76,6 +81,7 @@
 
 </body>
 </html>
+
 
 
 
