--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 
 <div class="layout">
 
+    <!-- Sidebar -->
     <aside class="sidebar">
-           <div class="logo">
-        <span class="logo-icon">HR</span>
-        <span class="logo-text">HireReady</span>
-    </div>
+
+        <div class="logo">
+            <div class="logo-box">HR</div>
+            <div class="logo-text">
+                <strong>HireReady</strong><br>
+                <span>Tech</span>
+            </div>
+        </div>
 
         <a href="index.html" class="active">Dashboard</a>
         <a href="jobs.html">Jobs</a>
@@ -20,65 +25,63 @@
         <a href="#">Resume Lab</a>
         <a href="signals.html">Industry Signals</a>
         <a href="trend.html">Weekly Trends</a>
+
     </aside>
 
+    <!-- Main Content -->
     <main class="main">
 
-    <div class="topbar">
-        <h1>Dashboard</h1>
-        <button class="primary-btn">+ Add Job</button>
-    </div>
-
-
-    <!-- Stats Overview -->
-    <div class="stats">
-        <div class="stat-card">
-            <h3>25+</h3>
-            <p>Active Job Openings</p>
+        <div class="topbar">
+            <h1>Dashboard</h1>
+            <button class="primary-btn">+ Add Job</button>
         </div>
-        <div class="stat-card">
-            <h3>18+</h3>
-            <p>Live Internships</p>
+
+        <!-- Stats Section -->
+        <div class="stats">
+            <div class="stat-card">
+                <h3>25+</h3>
+                <p>Active Job Openings</p>
+            </div>
+
+            <div class="stat-card">
+                <h3>18+</h3>
+                <p>Live Internships</p>
+            </div>
+
+            <div class="stat-card">
+                <h3>6</h3>
+                <p>Mass Recruiter Updates</p>
+            </div>
         </div>
-        <div class="stat-card">
-            <h3>6</h3>
-            <p>Mass Recruiter Updates</p>
+
+        <!-- Jobs Card -->
+        <div class="card">
+            <h3>📌 Latest Jobs Updated</h3>
+            <p>Mass Recruiter & Product-based roles curated daily with package & eligibility details.</p>
+            <a class="btn" href="jobs.html">View Jobs</a>
         </div>
-    </div>
 
-    <!-- Action Cards -->
+        <!-- Internship Card -->
+        <div class="card">
+            <h3>🎓 Internship Opportunities</h3>
+            <p>Internships for 2nd / 3rd / Final Year students across tech companies.</p>
+            <a class="btn" href="internships.html">View Internships</a>
+        </div>
 
-    <div class="card">
-        <h3>📌 Latest Jobs Updated</h3>
-        <p>Mass Recruiter & Product-based roles curated daily with package & eligibility details.</p>
-        <a class="btn" href="jobs.html">View Jobs</a>
-    </div>
+        <!-- Trends Card -->
+        <div class="card">
+            <h3>📊 Weekly Hiring Trends</h3>
+            <p>Understand skill demand movement, AI growth impact & cloud hiring signals.</p>
+            <a class="btn" href="trend.html">View Trends</a>
+        </div>
 
-    <div class="card">
-        <h3>🎓 Internship Opportunities</h3>
-        <p>Internships for 2nd / 3rd / Final Year students with stipend & direct apply links.</p>
-        <a class="btn" href="internships.html">View Internships</a>
-    </div>
-
-    <div class="card">
-        <h3>📊 Weekly Hiring Trends</h3>
-        <p>Understand skill demand movement, AI impact & industry signals.</p>
-        <a class="btn" href="trend.html">View Trends</a>
-    </div>
-
-    <div class="card">
-        <h3>📄 Resume Lab</h3>
-        <p>ATS Resume templates, checklist & optimization guidance for placements.</p>
-        <a class="btn" href="#">Explore Resume Lab</a>
-    </div>
-
-</main>
-
+    </main>
 
 </div>
 
 </body>
 </html>
+
 
 
 
