--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     <aside class="sidebar">
 
         <div class="logo">
-            <div class="logo-box">HR</div>
-            <div class="logo-text">
-                <strong>HireReady</strong><br>
-                <span>Tech</span>
-            </div>
+    <img src="logo.png" alt="HireReady Tech Logo">
+  </div>
         </div>
 
         <a href="index.html" class="active">Dashboard</a>
@@ -81,6 +78,7 @@
 
 </body>
 </html>
+
 
 
 
