--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
 <div class="layout">
 
-    <!-- Sidebar -->
-    <aside class="sidebar">
-        
-        <div class="logo">
-            <img src="logo.png" alt="HireReady Tech Logo">
-        </div>
+   <div class="logo">
+    <div class="brand-box">HR</div>
+    <div class="brand-text">
+        <span class="brand-main">HireReady</span>
+        <span class="brand-sub">Tech</span>
+    </div>
+</div>
 
         <a href="index.html" class="active">Dashboard</a>
         <a href="jobs.html">Jobs</a>
@@ -73,3 +74,4 @@
 
 </body>
 </html>
+
