--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 
 <div class="layout">
 
-   <div class="logo">
-    <div class="brand-box">HR</div>
-    <div class="brand-text">
-        <span class="brand-main">HireReady</span>
-        <span class="brand-sub">Tech</span>
-    </div>
-</div>
+    <!-- Sidebar -->
+    <aside class="sidebar">
+
+        <div class="logo">
+            <div class="brand-box">HR</div>
+            <div class="brand-text">
+                <span class="brand-main">HireReady</span>
+                <span class="brand-sub">Tech</span>
+            </div>
+        </div>
 
         <a href="index.html" class="active">Dashboard</a>
         <a href="jobs.html">Jobs</a>
@@ -33,6 +36,7 @@
             <button class="primary-btn">+ Add Job</button>
         </div>
 
+        <!-- Stats -->
         <div class="stats">
             <div class="stat-card">
                 <h3>25+</h3>
@@ -50,6 +54,7 @@
             </div>
         </div>
 
+        <!-- Cards -->
         <div class="card">
             <h3>📌 Latest Jobs Updated</h3>
             <p>Mass Recruiter & Product-based roles curated daily with package & eligibility details.</p>
@@ -74,4 +79,3 @@
 
 </body>
 </html>
-
