--- a/index.html
+++ b/index.html
@@ -35,7 +35,26 @@
             <h1>Dashboard</h1>
             <button class="primary-btn">+ Add Job</button>
         </div>
+<div class="search-section">
 
+    <input type="text" placeholder="Search jobs, skills, companies..." class="search-input">
+
+    <select class="filter-select">
+        <option>All Companies</option>
+        <option>Mass Recruiter</option>
+        <option>Product Based</option>
+    </select>
+
+    <select class="filter-select">
+        <option>All Packages</option>
+        <option>3-6 LPA</option>
+        <option>6-12 LPA</option>
+        <option>12+ LPA</option>
+    </select>
+
+    <button class="filter-btn">Apply</button>
+
+</div>
         <!-- Stats -->
         <div class="stats">
             <div class="stat-card">
@@ -53,7 +72,39 @@
                 <p>Mass Recruiter Updates</p>
             </div>
         </div>
+<div class="skill-section">
 
+    <h2>🔥 Trending Skills Demand</h2>
+
+    <div class="skill">
+        <span>Java</span>
+        <div class="progress">
+            <div class="progress-bar" style="width:85%"></div>
+        </div>
+    </div>
+
+    <div class="skill">
+        <span>Data Structures & Algorithms</span>
+        <div class="progress">
+            <div class="progress-bar" style="width:90%"></div>
+        </div>
+    </div>
+
+    <div class="skill">
+        <span>Cloud (AWS/Azure)</span>
+        <div class="progress">
+            <div class="progress-bar" style="width:75%"></div>
+        </div>
+    </div>
+
+    <div class="skill">
+        <span>React / Frontend</span>
+        <div class="progress">
+            <div class="progress-bar" style="width:70%"></div>
+        </div>
+    </div>
+
+</div>
         <!-- Cards -->
         <div class="card">
             <h3>📌 Latest Jobs Updated</h3>
@@ -79,3 +130,4 @@
 
 </body>
 </html>
+
